cmake_minimum_required(VERSION 3.13)
project(cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(cpp main.cpp 121_Best_Time_to_Buy_and_Sell_Stock.cpp 122_Best_Time_to_Buy_and_Sell_Stock_II.cpp 123_Best_Time_to_Buy_and_Sell_Stock_III.cpp "131.Palindrome Partitioning.cpp" "132.Palindrome Partitioning II .cpp" "134.Gas Station.cpp" "146.LRU Cache.cpp" 15.3Sum.cpp "1.Two Sum.cpp" "16.3Sum Closest.cpp" 18.4Sum.cpp "42.Trapping Rain Water.cpp" "20.Valid Parentheses.cpp" "cmake-build-debug/84.Largest Rectangle in Histogram.cpp" "94.Binary Tree Inorder Traversal.cpp" InversePairs.cpp GetLeastNumbers.cpp GetUglyNumber.cpp maxInWindows.cpp "33.Search in Rotated Sorted Array.cpp" "148.Sort List.cpp" "3.Longest Substring Without Repeating Characters.cpp" "11.Container With Most Water.cpp" "264.Ugly Number II.cpp" "56. Merge Intervals.cpp" "173.Binary Search Tree Iterator.cpp" "48.Rotate Image.cpp" "236. Lowest Common Ancestor of a Binary Tree.cpp" "103. Binary Tree Zigzag Level Order Traversal.cpp" "560. Subarray Sum Equals K.cpp")